--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Free tool to add Date of Photo (DOP) and Name on Passport size photo. Resize image to 20kb-50kb for SSC CGL, CHSL, UPSC, and Railways application forms.">
     <meta name="keywords" content="add date in passport size photo, photo date and name, ssc photo date maker, resize image to 50kb, date on photo app, passport photo editor online, ssc cgl photo size, upsc photo resizer">
 
-    <link rel="canonical" href="https://your-username.github.io/Sarkari-Photo-Date-Maker/" />
+    <link rel="canonical" href="https://orbitwebtools.github.io/Sarkari-Photo-Date-Maker/" />
     
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📅</text></svg>">
 
